# hackthe6ix

./: .gitignore  CANARY_DEFENSE_PLAN.md  DESIGN.md  LLM_SACRIFICE_IMPLEMENTATION_PLAN.md  README.md  WHAT_IS_TESTED.md  challenge.md  requirements.txt
adversarial/: CURRENT_RESULTS.md  JSON_GUIDE.md  README.md  RESEARCH_NOTES.md  RESULTS.md  canary_livecheck.py  cases.json  control_canary.py  metamorphic_checks.py  predicted_hidden_reference.json  predicted_hidden_stream.json  run_adversarial.py  run_predicted.py
epistemicos/: .env.example  pyproject.toml
epistemicos/api/: main.py
epistemicos/core/: contracts.py  engine.py  escalate.py  ledger.py  monitor.py  runtime.py  shadow.py  types.py
epistemicos/demo/: metrics.py  scenarios.py
epistemicos/llm/: compiler.py  embedder.py  normalize.py
epistemicos/redteam/: corpus.json  generate.py  report.py
epistemicos/tests/: conftest.py  test_api.py  test_embedder_escalation.py  test_engine.py  test_firewall.py  test_g07_completion.py  test_ledger.py  test_metrics.py  test_monitor.py  test_monitor_shadow_completion.py  test_normalize_compiler.py  test_redteam_corpus.py  test_replication_integrity_regressions.py  test_runtime_reconstruction.py  test_scenarios.py  test_types.py
epistemicos/tests/contracts/: README.md  test_release_integration.py  test_restart_recovery.py  test_t1_parser_bypass.py
epistemicos/ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
epistemicos/ui/src/: App.css  App.tsx  demo.ts  index.css  types.ts  useEventStream.ts
starter/: .env.example  epistemic_core.py  (+2 more)
(+10 files in other folders)
